--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -24,7 +24,7 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $ECR_REPOSITORY_URI
-      - echo Updating image tag in Kubernetes manifest...
+      # - echo Updating image tag in Kubernetes manifest...
       - sed -i "s|image: .*$|image: $ECR_REPOSITORY_URI:$IMAGE_TAG|g" kubernetes/deployment.yaml
       - echo Setting up Kubernetes config...
       - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --role-arn $EKS_ROLE_ARN
