--- a/Application-Code/backend/buildspec.yaml
+++ b/Application-Code/backend/buildspec.yaml
@@ -25,7 +25,7 @@ phases:
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $ECR_REPOSITORY_URI
       - echo Updating image tag in Kubernetes manifest...
-      - sed -i "s|image: .*$|image: $ECR_REPOSITORY_URI:$IMAGE_TAG|g" 
+      - sed -i "s@image: .*$@image: $ECR_REPOSITORY_URI:$IMAGE_TAG@g" Kubernetes-Manifests-file/Backend/deployment.yaml
       # kubernetes/deployment.yaml
       - echo Setting up Kubernetes config...
       - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --role-arn $EKS_ROLE_ARN
