--- a/Application-Code/backend/buildspec.yaml
+++ b/Application-Code/backend/buildspec.yaml
@@ -35,7 +35,8 @@ phases:
   build:
     commands:
       - echo Building Docker image...
-      - docker build -t $ECR_REPOSITORY_URI:$IMAGE_TAG .
+      # - docker build -t $ECR_REPOSITORY_URI:$IMAGE_TAG .
+      - docker build --tag $ECR_REPOSITORY_URI:$TAG .
       # - echo Running Trivy security scan on Docker image...
       # - trivy image --exit-code 1 --severity HIGH,CRITICAL $ECR_REPOSITORY_URI:$IMAGE_TAG
       # - echo Running SonarQube analysis...
@@ -46,8 +47,8 @@ phases:
   post_build:
     commands:
       - echo Exporting AWS credentials and applying manifests...
-      - kubectl apply -f kubernetes/deployment.yaml
-      - kubectl apply -f kubernetes/service.yaml
+      - kubectl apply -f Kubernetes-Manifests-file/Backend/deployment.yaml
+      - kubectl apply -f Kubernetes-Manifests-file/Backend/service.yaml
       - echo Storing build artifacts...
       - echo $IMAGE_TAG > image_tag.txt
 
