--- a/Application-Code/backend/buildspec.yaml
+++ b/Application-Code/backend/buildspec.yaml
@@ -35,6 +35,7 @@ phases:
   build:
     commands:
       - echo Building Docker image...
+      - echo $IMAGE_TAG
       - docker build -t $ECR_REPOSITORY_URI:$IMAGE_TAG .
       # - docker build --tag $ECR_REPOSITORY_URI:$TAG .
       # - echo Running Trivy security scan on Docker image...
