--- a/Application-Code/backend/buildspec.yaml
+++ b/Application-Code/backend/buildspec.yaml
@@ -31,6 +31,7 @@ phases:
       # kubernetes/deployment.yaml
       - echo Setting up Kubernetes config...
       - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --role-arn $EKS_ROLE_ARN
+      - kubectl get nodes
 
   build:
     commands:
