--- a/Application-Code/backend/buildspec.yaml
+++ b/Application-Code/backend/buildspec.yaml
@@ -4,7 +4,7 @@ version: 0.2
 env:
   variables:
     EKS_CLUSTER_NAME: "devsecops-internship"
-    EKS_ROLE_ARN: "arn:aws:iam::430118825352:role/EksCodeBuildKubectlRole"
+    EKS_KUBECTL_ROLE_ARN: "arn:aws:iam::430118825352:role/EksCodeBuildKubectlRole"
     ECR_REPOSITORY_URI: "public.ecr.aws/o1u4x9s4/three-tier-bd"
     # SONARQUBE_HOST: "your-sonarqube-host-url"
     # SONARQUBE_TOKEN: "your-sonarqube-auth-token"
@@ -15,7 +15,7 @@ phases:
     # runtime-versions:
       # docker: 20
     commands:
-      - echo Installing dependencies...
+      - echo "Installing dependencies..."
       # - curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin
       # - curl -o /opt/sonar-scanner.zip -L "https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.2.2472-linux.zip"
       # - unzip /opt/sonar-scanner.zip -d /opt && rm /opt/sonar-scanner.zip
@@ -23,14 +23,23 @@ phases:
 
   pre_build:
     commands:
-      - echo Logging in to Amazon ECR...
+      - echo "Logging in to Amazon ECR..."
       # - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $ECR_REPOSITORY_URI
       - aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/o1u4x9s4
       # - echo Updating image tag in Kubernetes manifest...
       # - sed -i "s@image: .*$@image: $ECR_REPOSITORY_URI:$IMAGE_TAG@g" Kubernetes-Manifests-file/Backend/deployment.yaml
       # kubernetes/deployment.yaml
-      - echo Setting up Kubernetes config...
-      - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --role-arn $EKS_ROLE_ARN
+      - echo "Setting up Kubernetes config..."
+ 	  - echo "Setting Environment Variables related to AWS CLI for Kube Config Setup"
+      - CREDENTIALS=$(aws sts assume-role --role-arn $EKS_KUBECTL_ROLE_ARN --role-session-name codebuild-kubectl --duration-seconds 900)
+      - export AWS_ACCESS_KEY_ID="$(echo ${CREDENTIALS} | jq -r '.Credentials.AccessKeyId')"
+      - export AWS_SECRET_ACCESS_KEY="$(echo ${CREDENTIALS} | jq -r '.Credentials.SecretAccessKey')"
+      - export AWS_SESSION_TOKEN="$(echo ${CREDENTIALS} | jq -r '.Credentials.SessionToken')"
+      - export AWS_EXPIRATION=$(echo ${CREDENTIALS} | jq -r '.Credentials.Expiration')
+      # Setup kubectl with our EKS Cluster              
+      - echo "Update Kube Config"      
+      - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME
+     # - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --role-arn $EKS_ROLE_ARN
       - kubectl get nodes
 
   build:
