--- a/Application-Code/backend/buildspec.yaml
+++ b/Application-Code/backend/buildspec.yaml
@@ -47,7 +47,7 @@ phases:
       - echo Building Docker image...
       # - echo $IMAGE_TAG
       - TAG="$(date +%Y-%m-%d.%H.%M.%S).$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
-      - docker build --tag $ECR_REPOSITORY_URI:$TAG .
+      - docker build -f Application-Code/backend/Dockerfile --tag $ECR_REPOSITORY_URI:$TAG .
       # - docker build -t $ECR_REPOSITORY_URI:$IMAGE_TAG .
       # - docker build --tag $ECR_REPOSITORY_URI:$TAG .
       # - echo Running Trivy security scan on Docker image...
